--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,9 @@ node_modules/
 .vscode/
 .idea/
 
-# 동적으로 생성되는 public 디렉토리의 에셋 파일을 제외
+# 동적으로 생성되는 public / storage 디렉토리의 파일을 제외
 /public/assets/*
+/public/storage/*
 
 # .gitignore 파일을 제외한 storage 디렉토리 내의 모든 파일을 제외
 /storage/*
