--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "ramsey/uuid": "^4.7",
         "guzzlehttp/guzzle": "^7.9",
         "monolog/monolog": "^3.7",
-        "symfony/cache": "^7.1"
+        "symfony/cache": "^7.1",
+        "ezyang/htmlpurifier": "^4.17"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.3"
