--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^7.9",
         "monolog/monolog": "^3.7",
         "symfony/cache": "^7.1",
-        "ezyang/htmlpurifier": "^4.17"
+        "ezyang/htmlpurifier": "^4.17",
+        "hybridauth/hybridauth": "^3.11"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.3"
