--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "symfony/cache": "^7.1",
         "ezyang/htmlpurifier": "^4.17",
         "hybridauth/hybridauth": "^3.11",
-        "psr/container": "^2.0"
+        "psr/container": "^2.0",
+        "intervention/image": "^3.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.3"
