--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "ezyang/htmlpurifier": "^4.17",
         "hybridauth/hybridauth": "^3.11",
         "psr/container": "^2.0",
-        "intervention/image": "^3.8"
+        "intervention/image": "^3.8",
+        "nyholm/psr7": "^1.8",
+        "nyholm/psr7-server": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.3"
